<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/marginLarge"
    android:background="@drawable/rectangle_rounded_corner"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="@dimen/imageSize"
        android:layout_height="@dimen/imageSize"
        android:layout_margin="@dimen/marginMeduim"
        app:shapeAppearanceOverlay="@style/customRoundedImageView"
        app:srcCompat="@drawable/img_profile" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginMeduim"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="@style/TextStyleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ahmed_hassan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/TextStyleName.TextStyleJob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginSmall"
            android:text="@string/engineer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/TextStyleName.TextStyleReview.TextStyleLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/uk"
            app:drawableStartCompat="@drawable/ic_location"
            app:drawableTint="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextStyleName.TextStyleReview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_150_reviews"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/TextStyleName.TextStyleReview.TextStyleRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginSmall"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:text="@string/_4_5"
                app:drawableEndCompat="@drawable/ic_star"
                app:drawableTint="@color/yellow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginMeduim"
        android:layout_marginEnd="@dimen/marginMeduim"
        android:gravity="end"
        android:orientation="vertical">

        <TextView
            style="@style/TextStyleName.TextStyleReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_red"
            android:gravity="center"
            android:text="@string/_3_hr"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/TextStyleName.TextStyleJob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/russian"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/TextStyleName.TextStyleReview.TextStyleLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5_days_ago"
            android:textColor="@color/blue_100"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>